[gd_scene load_steps=2 format=3 uid="uid://dkl3g6cduc8jj"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/ResearchSection/history_item.gd" id="1_jwgis"]

[node name="HistoryItem" type="MarginContainer"]
custom_minimum_size = Vector2(779, 90)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jwgis")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.247059, 0.32549, 0.32549, 1)

[node name="ResearchIdLabel" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "12b"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBox" type="HBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="BG/HBox"]
custom_minimum_size = Vector2(475, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="BG/HBox/MC"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="BG/HBox/MC/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3

[node name="TitleLabel" type="Label" parent="BG/HBox/MC/VBox/MC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "Cutting Ability"

[node name="MC2" type="MarginContainer" parent="BG/HBox/MC/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 25

[node name="EffectLabel" type="Label" parent="BG/HBox/MC/VBox/MC2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Unlock wood cutting"

[node name="MC3" type="MarginContainer" parent="BG/HBox/MC/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 4

[node name="PriceLabel" type="Label" parent="BG/HBox/MC/VBox/MC3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_font_sizes/font_size = 10
text = "Price: 1000 Oak, 500 Apple"

[node name="MC2" type="MarginContainer" parent="BG/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 0
